--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,19 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
+[Dd]ebugPublic/
+*/bin/
+*/obj/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
+*.suo
+*.user
+_ReSharper.*
+bin
+obj
+packages
+
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
